11/opa-gatekeeper/privileged-container/bad-nginx copy.yml
apiVersion: v1
kind: Pod
metadata:
  name: bad-nginx-copy
  labels:
    app: bad-nginx-copy
spec:
  containers:
  - name: nginx
    image: nginx
    securityContext:
      privileged: true
